# yt-live-dungeon

./: .env.example  .gitignore  README.md  compose.yaml
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/routes/: commands.py  runs.py
backend/app/core/: command_parser.py  cooldown.py  enemy_spawn.py  nickname_generator.py  spell_effects.py  stat_generator.py
backend/app/db/: session.py
backend/app/models/: __init__.py  command.py  dead_youtube_id.py  enemy.py  item.py  log.py  nickname_word.py  run.py  run_adventurer.py  run_adventurer_item.py  run_enemy.py  run_pending_join.py  run_result_choice.py  run_status.py  spell.py
backend/app/redis/: client.py
backend/app/repositories/: adventurer_repository.py  command_repository.py  enemy_repository.py  log_repository.py  nickname_repository.py  pending_join_repository.py  run_repository.py
backend/app/schemas/: command.py  log.py  run.py
backend/app/services/: battle_service.py  command_service.py  floor_service.py
backend/tests/core/: test_cooldown.py  test_spell_effects.py
backend/tests/services/: test_battle_service.py  test_command_service_spell.py
database/: alembic.ini
database/migrations/: env.py
database/migrations/versions/: 0001_initial_schema.py  0002_seed_data.py  0003_add_nickname_word_unique.py  0004_add_enemy_role.py  0005_spec_alignment.py  0006_drop_attr_indigo.py  0007_drop_barrier_columns.py
docker/postgres/: Dockerfile
